--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -32,3 +32,15 @@ h1 {
     font-size: 2.75rem;
     color: rgb(72, 8, 175);
 }
+
+h2,
+h3,
+h4,
+h5 {
+    color: rgb(72, 8, 175);
+}
+
+h3 {
+    text-align: center;
+    font-size: 1.25rem;
+}
